# mazer

./: .gitignore  Cargo.toml  LICENSE  Makefile  README.md  SYNTAX.md  SYNTAX.zr  TODO.maple  TODO.zr  architecture.md  index.html  justfile  mazer-doc.json  output.html  thoughts.txt  todo.txt
.cargo/: config.toml
examples/: bigmarkdown.zr  bigtext.zr  calc4_1.maple  calc4_1.zr  calculator.zr  calculus.maple  debugger.zr  docs.md  empty.zr  errors.maple  errors.zr  eval.maple  eval.zr  greekLetters.maple  hello.maple  hello.zr  inbuilt.maple  markdown.md  math.zr  math224_summary.zr  matrix.zr  minimal.zr  mix.zr  multiline.maple  must_pass.zr  newline.zr  parens.maple  parens.zr  simple.zr  small.zr  substitution.zr  tables.zr  test_new_syntax.zr
maple-cli/: Cargo.toml  index.html
maple-cli/src/: main.rs  state.rs
maple-core/: Cargo.toml
maple-core/src/: data_types.rs  document.rs  errors.rs  interpreter.rs  lexer.rs  lib.rs  parser.rs  pretty_err.rs  stdlib.rs  tests.rs  tokenizer.rs
maple-data-structures/: Cargo.toml
maple-macros/: Cargo.toml
maple-macros/src/: lib.rs
mazer-atog/: Cargo.toml
mazer-atog/src/: lib.rs
mazer-cli/: Cargo.toml
mazer-cli/src/: lib.rs  main.rs  state.rs  timer.rs
mazer-cli/templates/: index.html
mazer-core/: Cargo.toml
mazer-core/src/: codegen.rs  data_structures.rs  debug_ctx.rs  document.rs  evaluation.rs  inbuilt.rs  interpreter.rs  lib.rs  parser.rs  pretty_err.rs  solveable.rs  stdlib.rs  tests.rs  tokenizer.rs
mazer-data-structures/: Cargo.toml
mazer-data-structures/src/: lib.rs
mazer-dbg/: Cargo.toml
mazer-dbg/examples/: abstract_data_types.rs  backtrace.rs  debug_only.rs  error_types.rs  inspect_when.rs  ron_example.rs  std_data_types.rs  time_travel.rs  variables.rs
mazer-dbg/src/: lib.rs  tests.rs
mazer-gendoc/: Cargo.toml
mazer-gendoc/src/: main.rs
mazer-html/: Cargo.toml
mazer-html/src/: document.rs  html.rs
mazer-lisp/: Cargo.toml
mazer-lisp/src/: ast.rs  environment.rs  interpreter.rs  lib.rs  parser.rs  show.rs
mazer-macros/: Cargo.toml
mazer-macros/src/: lib.rs
mazer-md/: Cargo.toml
mazer-md/src/: lib.rs
mazer-parser/: Cargo.toml
mazer-parser/src/: lib.rs
mazer-render/: Cargo.toml
mazer-render/src/: docs.rs  lib.rs  lib.rs.backup
mazer-stdlib/: Cargo.toml
mazer-stdlib/src/: lib.rs
mazer-types/: Cargo.toml
mazer-types/src/: environment.rs  error.rs  implfuncs.rs  lib.rs
mazer-units/: Cargo.toml
mazer-units/src/: lib.rs
mazer-wasm/: Cargo.toml  README.md  index.html  mazer.js
mazer-wasm/demo/: about.zr  note.zr
mazer-wasm/src/: lib.rs
mazer-webast/: Cargo.toml
mazer-webast/src/: lib.rs
scripts/: setup.sh
src/: data_structures.rs  lexer.rs  lib.rs  main.rs  parser.rs  solveable.rs  tests.rs  vm.rs
