cargo-features = ["codegen-backend"]
[workspace]
members = [
    "mazer-cli",
    "mazer-dbg",
    "mazer-parser",
    "mazer-lisp",
    "mazer-html",
    "mazer-render",
    "mazer-stdlib",
    "mazer-types",
    "mazer-atog",
    "mazer-webast",
    "mazer-wasm",
]

resolver = "3"

[profile.release]
opt-level = 3
strip = true
lto = true
overflow-checks = false

[profile.release.package."*"]
opt-level = "z"

[profile.dev]
debug = 0
codegen-backend = "cranelift"
incremental = true

[profile.dev.package."*"]
opt-level = 0

