cargo-features = ["codegen-backend"]

[workspace]
members = [
    # "mazer-ast",
    "mazer-atog",
    "mazer-cli",
    "mazer-dbg",
    "mazer-gendoc",
    "mazer-html",
    "mazer-lisp",
    "mazer-macros",
    "mazer-parser",
    "mazer-render",
    "mazer-stdlib",
    "mazer-types",
    "mazer-wasm",
]
resolver = "3"

[profile.dev]
opt-level = 1
codegen-backend = "cranelift"
debug = 0
# incremental = true

[profile.dev.package."*"]
opt-level = 1

[profile.release]
opt-level = 3
lto = true
overflow-checks = false
strip = true

[profile.release.package."*"]
opt-level = "z"

[workspace.lints.clippy]
pedantic = "deny"
nursery  = "deny"

