[package]
name = "maple-cli"
version = "0.6.0"
edition = "2021"

[dependencies]
bigdecimal = "0.4.5"
bincode = "1.3.3"
clap = { version = "4.5.4", features = ["derive"] }
maple-core = { path = "../maple-core" }
notify = "6.1.1"
opener = "0.7.1"
tokio = { version = "1.38.0", features = ["full"] }
unicode-segmentation = "1.11.0"
warp = "0.3.7"

[[bin]]
name = "maple"
path = "src/main.rs"

