[package]
name = "maple-cli"
version = "0.8.0"
edition = "2021"

[dependencies]
bincode = "1.3.3"
clap = { version = "4.5.4", features = ["derive"] }
colored = "2.1.0"
maple-core = { path = "../maple-core" }
notify = "6.1.1"
opener = "0.7.1"
tokio = { version = "1.38.0", features = ["full"] }
unicode-segmentation = "1.11.0"
warp = "0.3.7"

[[bin]]
name = "maple"
path = "src/main.rs"
