[package]
name = "maple-core"
version = "0.3.0"
edition = "2021"
license = "MIT"
description = "A minimal, simple math markup language that compiles to HTML, written in Rust"

[dependencies]
maple-macros = { path = "../maple-macros" }
maple-data-structures = { path = "../maple-data-structures" }
anyhow = "1.0.86"
ariadne = "=0.3.0"
thiserror = "1.0.61"
