[package]
name = "maple-core"
version = "0.7.0"
edition = "2021"
license = "MIT"
description = "A minimal, simple math markup language that compiles to HTML, written in Rust"

[dependencies]
maple-macros = { path = "../maple-macros" }
maple-data-structures = { path = "../maple-data-structures" }
anyhow = "1.0.86"
# bincode = "1.3.3"
unicode-segmentation = "1.11.0"
colored = "2.1.0"
rayon = "1.10.0"
bumpalo = "3.16.0"
