[package]
name = "mazer-cli"
version = "0.12.4"
edition = "2021"
license = "MIT"
description = "A minimal, simple math markup language that compiles to HTML, written in Rust"

include = ["src/**/*", "templates/**/*"]

[dependencies]
clap = { version = "4.5.4", features = ["derive"] }
colored = "2.1.0"
include_absolute_path = "0.1.5"
mazer-core = { path = "../mazer-core", version="^0.*" }
notify = "6.1.1"
opener = "0.7.1"
rust-embed = "8.6.0"
tokio = { version = "1.38.0", features = ["full"] }
warp = "0.3.7"

[[bin]]
name = "mazer"
path = "src/main.rs"
