[package]
name = "mazer-cli"
version = "0.15.0"
edition = "2024"

[dependencies]
mazer-parser = { path = "../mazer-parser" }
mazer-html = { path = "../mazer-html" }
mazer-lisp = { path = "../mazer-lisp" }
mazer-types = { path = "../mazer-types" }
tiny_http = "0.12.0"
notify = "8.2.0"
opener = "0.8.3"

