[package]
name = "mazer-core"
version = "0.12.0"
edition = "2021"
license = "MIT"
description = "A minimal, simple math markup language that compiles to HTML, written in Rust"

[dependencies]
mazer-macros = { path = "../mazer-macros", version = "^0.*" }
faer = "0.21"
unicode-segmentation = "1.11.0"
colored = "2.1.0"
rayon = "1.10.0"
regex = "1.11.1"
smartstring = "1.0.1"

[profile.dev.package.faer]
opt-level = 3
