[package]
name = "mazer-dbg"
version = "0.2.0"
edition = "2024"
license = "MIT OR Apache-2.0"
description = "A debugging tool similar to Suneido's Inspect"

[dependencies]
eframe = "0.27"
egui = "0.27"
nix = { version = "0.27", features = ["process", "signal", "socket"] }
serde = { version = "1.0", features = ["derive"] }
ipc-channel = "0.19.0"
egui_extras = { version = "0.31.1", features = ["syntect"] }
syntect = "5.2.0"
