[package]
name = "mazer-dbg"
version = "2.4.0"
edition = "2024"
license = "MIT OR Apache-2.0"
description = "A debugging tool similar to Suneido's Inspect"
documentation = "https://docs.rs/mazer-dbg/latest/mazer_dbg/"
repository = "https://github.com/frroossst/mazer/tree/master/mazer-dbg"

[[example]]
name = "time_travel_demo"
path = "examples/time_travel_demo.rs"

[dependencies]
eframe = "0.31.1"
egui = "0.31.1"
egui_extras = { version = "0.31.1", features = ["syntect"] }
syntect = "5.2.0"
nix = { version = "0.27", features = ["process", "signal", "socket"] }
serde = { version = "1.0", features = ["derive"] }
ipc-channel = "0.19.0"
arboard = "3.3.0"
ron = "0.8"
