[package]
name = "mazer-gendoc"
version = "0.1.0"
edition = "2024"
description = "Documentation generator for Mazer - outputs function metadata as JSON"

[dependencies]
mazer-types = { path = "../mazer-types" }
mazer-atog = { path = "../mazer-atog" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
